# eco-erp

./: .gitignore  QA_CHECKLIST.md  README.md  package.json  pyproject.toml  setup.py
.clinerules/: architecture.md  coding.md  testing.md
eco_app/: check_ws.py  create_bhushan.py  delete_roles.py  disable_roles.py  fix_dashboard_perms.py  fix_system_perms.py  fixer.py  hooks.py  modules.txt  patches.txt  reload_workspace.py  rename_settings.py  sql_test.py  sql_ws_fix.py  update_ws_orm.py  whitelabel_db.py
eco_app/branding/: boot.py
eco_app/config/: eco_app.py
eco_app/eco_app/: branding  config  doctype  events  public  report  tasks  templates  tests  utils  workspace
eco_app/events/: application.py  crm.py  student.py
eco_app/fixtures/: README.md  custom_field.json  letter_head.json  module_profile.json  role.json  workflow.json  workflow_action.json  workflow_state.json
eco_app/public/: node_modules
eco_app/tasks/: __init__.py  tasks.py
eco_app/tests/: test_analytics_dashboard.py  test_commission_record.py  test_course_master.py  test_document_checklist.py  test_eco_followup_task.py  test_intake_calendar_entry.py  test_integration.py  test_language_test_score.py  test_module_check.py  test_offer_letter.py  test_student_application.py  test_student_fee_structure.py  test_student_journey_workflow.py  test_student_profile.py  test_university_master.py  test_university_partnership.py  test_visa_application.py  test_whatsapp_integration.py
eco_app/utils/: helpers.py  whatsapp.py
eco_app/www/: analytics_dashboard.html  analytics_dashboard.py
(+89 files in other folders)
